--- a/infomation/src/components/PCDownload/index.less
+++ b/infomation/src/components/PCDownload/index.less
@@ -5,11 +5,13 @@
   position: relative;
 }
 .content {
+  max-width: 660px;
   .download {
     display: flex;
     justify-content: space-between;
     align-items: flex-start;
     .title {
+      max-width: 570px;
       font-size: 18px;
       font-weight: bold;
       line-height: 24px;
