增加自动跳转

--- a/infomation/src/pages/document.ejs
+++ b/infomation/src/pages/document.ejs
@@ -11,23 +11,23 @@
     <link rel="stylesheet" href="//at.alicdn.com/t/font_799474_mqmjr3vaqtk.css" />
     <script src="/static/conf.js?v=<%=new Date().getTime()%>" charset="utf-8"></script>
     <script type="text/javascript">
-      ;(function () {
-        var src = '/static/eruda.min.js';
-        if (!/eruda=true/.test(window.location) && localStorage.getItem('active-eruda') != 'true') return;
-        document.write('<scr' + 'ipt src="' + src + '"></scr' + 'ipt>');
-        document.write('<scr' + 'ipt>eruda.init();</scr' + 'ipt>');
-        // 自动跳转
-        var sUserAgent = window.navigator.userAgent;
-        if (sUserAgent.indexOf('Android') > -1 || sUserAgent.indexOf('iPhone') > -1 || sUserAgent.indexOf('iPad') > -1 || sUserAgent.indexOf('iPod') > -1 || sUserAgent.indexOf('Symbian') > -1) {
-          if (location.href.indexOf('/pc/') >= 0) {
-            location.href = location.href.replace('/pc/', '/mobile/')
-          }
-        } else {
-          if (location.href.indexOf('/mobile/') >= 0) {
-            location.href = location.href.replace('/mobile/', '/pc/')
-          }
+      // ;(function () {
+      //   var src = '/static/eruda.min.js';
+      //   if (!/eruda=true/.test(window.location) && localStorage.getItem('active-eruda') != 'true') return;
+      //   document.write('<scr' + 'ipt src="' + src + '"></scr' + 'ipt>');
+      //   document.write('<scr' + 'ipt>eruda.init();</scr' + 'ipt>');
+      // })();
+      // 自动跳转
+      var sUserAgent = window.navigator.userAgent;
+      if (sUserAgent.indexOf('Android') > -1 || sUserAgent.indexOf('iPhone') > -1 || sUserAgent.indexOf('iPad') > -1 || sUserAgent.indexOf('iPod') > -1 || sUserAgent.indexOf('Symbian') > -1) {
+        if (location.href.indexOf('/pc/') >= 0) {
+          location.href = location.href.replace('/pc/', '/mobile/')
         }
-      })();
+      } else {
+        if (location.href.indexOf('/mobile/') >= 0) {
+          location.href = location.href.replace('/mobile/', '/pc/')
+        }
+      }
     </script>
 
   </head>
