修改IE兼容性

--- a/infomation/src/components/PCDownload/index.less
+++ b/infomation/src/components/PCDownload/index.less
@@ -1,12 +1,13 @@
 .body {
+  width: 660px;
   padding: 18px 24px;
   background: #fff;
   border-bottom: 1px solid #f4f4f4;
   position: relative;
 }
 .content {
-  max-width: 660px;
   .download {
+    width: 660px;
     display: flex;
     justify-content: space-between;
     align-items: flex-start;
