修改二维码大小

--- a/infomation/src/components/PCFixedMenu/index.less
+++ b/infomation/src/components/PCFixedMenu/index.less
@@ -39,15 +39,20 @@
 .qrcode {
   display: none;
   position: absolute;
-  top: -150px;
-  left: -360px;;
+  top: -100px;
+  left: -280px;;
   border: 1px solid rgba(221, 221, 221, 0.6);
   padding-top: 15px;
-  color: #8f969c;
+  color: #3399ea;
+  font-size: 12px;
+  font-weight: bold;
   z-index: 999;
   background-color: #fff;
 }
+.qrcode .shareInfo {
+  padding: 0 15px;
+}
 .qrcode img {
-  width: 350px;
-  height: 350px;
+  width: 250px;
+  height: 250px;
 }
