--- a/infomation/src/components/PCReadingPraiseShare/index.less
+++ b/infomation/src/components/PCReadingPraiseShare/index.less
@@ -64,19 +64,23 @@
   .qrcode {
     position: absolute;
     top: 30px;
-    left: 70px;
+    left: 50px;
     padding-top: 15px;
     z-index: 999;
-    width: 350px;
-    font-size: 14px;
-    color: #8f969c;
+    width: 250px;
+    font-size: 13px;
+    color: #3399ea;
+    font-weight: bold;
     background-color: #fff;
     box-shadow: 0 1px 2px 0 #e0e4e9;
     border: 1px solid rgba(217,222,224,.99);
     text-align: center;
+    & i {
+      color: #000;
+    }
     img {
-      width: 350px;
-      height: 350px;
+      width: 250px;
+      height: 250px;
     }
   }
 }
