--- a/infomation/src/components/Menu/index.css
+++ b/infomation/src/components/Menu/index.css
@@ -18,7 +18,8 @@
 .item {
   display: inline-block;
   list-style: none;
-  width: 20%;
+  /* width: 20%; */
+  width: 25%;
   color: #333;
   box-sizing: border-box;
   height: 35px;
