修改点击不增加阅读的bug

--- a/infomation/src/components/list-item.css
+++ b/infomation/src/components/list-item.css
@@ -16,6 +16,7 @@
   text-decoration: none;
   -webkit-user-select: none;
   -webkit-tap-highlight-color: transparent;
+  cursor: pointer;
 }
 .title {
   outline: 0;
