--- a/infomation/src/components/PCContent/index.less
+++ b/infomation/src/components/PCContent/index.less
@@ -14,6 +14,7 @@
     height: 24px;
     display: inline-block;
     letter-spacing: 0.6px;
+    cursor: pointer;
     & a {
       color: #2e3135 !important;
     }
